--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div id="progress"></div>
         </div>
         <p id="status"></p>
+        <textarea id="log-area" readonly></textarea>
     </div>
     <script src="renderer.js"></script>
 </body>
