--- a/index.html
+++ b/index.html
@@ -5,13 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Downloader</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <style>
         body {
             background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+        .titlebar {
+            -webkit-app-region: drag;
+            height: 30px;
+            background: #007bff;
+            color: #fff;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 10px;
+        }
+        .titlebar-button {
+            -webkit-app-region: no-drag;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+        }
+        .titlebar-button:hover {
+            background-color: rgba(255,255,255,0.1);
         }
         .container {
             max-width: 800px;
-            margin-top: 50px;
+            margin-top: 20px;
+            height: calc(100vh - 50px);
+            overflow-y: auto;
         }
         .card {
             border-radius: 15px;
@@ -33,6 +61,14 @@
     </style>
 </head>
 <body>
+    <div class="titlebar">
+        <div class="titlebar-title">YouTube Downloader</div>
+        <div class="titlebar-buttons">
+            <div class="titlebar-button" id="minimize-button"><i class="fas fa-window-minimize"></i></div>
+            <div class="titlebar-button" id="maximize-button"><i class="fas fa-window-maximize"></i></div>
+            <div class="titlebar-button" id="close-button"><i class="fas fa-times"></i></div>
+        </div>
+    </div>
     <div class="container">
         <div class="card">
             <div class="card-header">
@@ -47,8 +83,8 @@
                     <div class="mb-3">
                         <label for="output-path" class="form-label">Save to:</label>
                         <div class="input-group">
-                            <input type="text" class="form-control" id="output-path" required>
-                            <button class="btn btn-outline-secondary" type="button" id="browse-button">Browse</button>
+                            <input type="text" class="form-control" id="output-path" required readonly>
+                            <button class="btn btn-outline-secondary" type="button" id="browse-button">Choose Destination</button>
                         </div>
                     </div>
                     <div class="mb-3">
