--- a/index.html
+++ b/index.html
@@ -4,109 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Downloader</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <style>
-        body {
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-        .titlebar {
-            -webkit-app-region: drag;
-            height: 30px;
-            background: #007bff;
-            color: #fff;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 10px;
-        }
-        .titlebar-button {
-            -webkit-app-region: no-drag;
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            width: 30px;
-            height: 30px;
-            cursor: pointer;
-        }
-        .titlebar-button:hover {
-            background-color: rgba(255,255,255,0.1);
-        }
-        .container {
-            max-width: 800px;
-            margin-top: 20px;
-            height: calc(100vh - 50px);
-            overflow-y: auto;
-        }
-        .card {
-            border-radius: 15px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .card-header {
-            background-color: #007bff;
-            color: white;
-            border-radius: 15px 15px 0 0 !important;
-        }
-        .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
-        }
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
-    <div class="titlebar">
-        <div class="titlebar-title">YouTube Downloader</div>
-        <div class="titlebar-buttons">
-            <div class="titlebar-button" id="minimize-button"><i class="fas fa-window-minimize"></i></div>
-            <div class="titlebar-button" id="maximize-button"><i class="fas fa-window-maximize"></i></div>
-            <div class="titlebar-button" id="close-button"><i class="fas fa-times"></i></div>
+    <!-- Remova ou comente esta parte se existir -->
+    <!--
+    <div class="window-controls-container">
+        <div class="window-controls animate__animated animate__fadeInDown">
+            <button id="minimize-button" class="control-button">_</button>
+            <button id="maximize-button" class="control-button">□</button>
+            <button id="close-button" class="control-button">X</button>
         </div>
     </div>
-    <div class="container">
-        <div class="card">
-            <div class="card-header">
-                <h2 class="text-center mb-0">YouTube Downloader</h2>
+    -->
+    <div class="drag-region"></div>
+    <div class="content-container">
+        <form id="download-form" class="animate__animated animate__fadeInUp">
+            <label for="video-url">Video URL:</label>
+            <input type="text" id="video-url" required>
+            <label for="output-path">Save to:</label>
+            <div class="input-group">
+                <input type="text" id="output-path" required>
+                <button type="button" id="browse-button">Browse</button>
             </div>
-            <div class="card-body">
-                <form id="download-form">
-                    <div class="mb-3">
-                        <label for="video-url" class="form-label">Video URL:</label>
-                        <input type="text" class="form-control" id="video-url" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="output-path" class="form-label">Save to:</label>
-                        <div class="input-group">
-                            <input type="text" class="form-control" id="output-path" required readonly>
-                            <button class="btn btn-outline-secondary" type="button" id="browse-button">Choose Destination</button>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="quality" class="form-label">Quality:</label>
-                        <select class="form-select" id="quality">
-                            <option value="high">High</option>
-                            <option value="medium">Medium</option>
-                            <option value="low">Low</option>
-                        </select>
-                    </div>
-                    <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary">Download Video</button>
-                    </div>
-                </form>
-                <div class="mt-3">
-                    <div class="progress">
-                        <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-                    </div>
-                </div>
-                <div id="status" class="mt-3 text-center"></div>
-            </div>
+            <label for="quality">Quality:</label>
+            <select id="quality" required>
+                <option value="" disabled selected>Select Quality</option>
+            </select>
+            <button type="submit">Download Video</button>
+        </form>
+        <div id="progress-bar-container" class="animate__animated animate__fadeIn">
+            <div id="progress-bar"></div>
         </div>
+        <div id="status" class="animate__animated animate__fadeIn"></div>
     </div>
     <script src="renderer.js"></script>
 </body>
