adição botão minimizar e maximizar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="titlebar">
         <div class="titlebar-drag">YouTube Downloader</div>
         <div class="titlebar-buttons">
-            <button id="minimize-button">-</button>
-            <button id="close-button">×</button>
+            <button id="minimize-button">&#8211;</button>
+            <button id="close-button">&#10005;</button>
         </div>
     </div>
     <div class="container">
