adicionado janela de informações

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <div id="progress-bar"></div>
         </div>
         <p id="status-label"></p>
+        <div id="video-info"></div>
     </div>
     <script src="renderer.js"></script>
 </body>
