Improve code and ensure all functionalities are operational
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Laiirton/Youtube_Downloader?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="container">
         <div class="input-group">
-            <input type="text" id="url-input" placeholder="Cole o URL do vídeo aqui">
+            <input type="text" id="url-input" placeholder="Cole o URL do vídeo aqui" required pattern="https?://.+">
         </div>
         <button id="path-button"><i class="fas fa-folder-open"></i> Escolher pasta de destino</button>
         <button id="download-button"><i class="fas fa-download"></i> Baixar</button>
